--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
   </nav>
   <!-- Akhir Navbar -->
+
   <!-- jumbotron -->
   <div class="jumbotron text-center">
     <img src="img/profil.png" class="img-thumbnail rounded-pill" width="200px">
@@ -56,7 +57,7 @@
 
       <div class="row">
         <div class="col-sm-4 offset-sm-2 text-justify">
-          <p>Lorem ipsum door sit amet consectetur adipisicing elit. Iusto est incidunt dolorum minima sit temporibus
+          <p class="pKiri">Lorem ipsum door sit amet consectetur adipisicing elit. Iusto est incidunt dolorum minima sit temporibus
             culpa nostrum laudantium ducimus et aut minus quaerat aspernatur, officiis eum quidem ex repudiandae
             repellat.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi itaque eveniet, repellat autem aspernatur
@@ -67,7 +68,7 @@
             repellat culpa?</p>
         </div>
         <div class="col-sm-4 text-justify">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ipsam, omnis maxime odit corrupti cum harum
+          <p class="pKanan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ipsam, omnis maxime odit corrupti cum harum
             tenetur autem ab dolore, suscipit sapiente explicabo voluptatem non aspernatur aut facere architecto
             perferendis?
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt repellendus vel minima, et laboriosam
@@ -94,32 +95,32 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <a href="">
+          <a href="" class="thumbnail">
             <img src="img/1.JPG" alt="gambar1" class="img-thumbnail">
           </a>
         </div>
         <div class="col-sm-4">
-          <a href="">
+          <a href="" class="thumbnail">
             <img src="img/2.JPG" alt="gambar2" class="img-thumbnail">
           </a>
         </div>
         <div class="col-sm-4">
-          <a href="">
+          <a href="" class="thumbnail">
             <img src="img/3.JPG" alt="gambar3" class="img-thumbnail">
           </a>
         </div>
         <div class="col-sm-4">
-          <a href="">
+          <a href="" class="thumbnail">
             <img src="img/4.JPG" alt="gambar4" class="img-thumbnail">
           </a>
         </div>
         <div class="col-sm-4">
-          <a href="">
+          <a href="" class="thumbnail">
             <img src="img/5.JPG" alt="gambar5" class="img-thumbnail">
           </a>
         </div>
         <div class="col-sm-4">
-          <a href="">
+          <a href="" class="thumbnail">
             <img src="img/6.JPG" alt="gambar6" class="img-thumbnail">
           </a>
         </div>
@@ -187,6 +188,7 @@
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/jquery.easing.1.3.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
